--- a/beta_Starise_1_0_49_20190423_57be8d5.plist
+++ b/beta_Starise_1_0_49_20190423_57be8d5.plist
@@ -11,19 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://NicholasHuangTW.github.io/StariceUAT.ipa</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>url</key>
-					<string>https://NicholasHuangTW.github.io/icon_60@2x.png</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>url</key>
-					<string>https://NicholasHuangTW.github.io/icon_1024.png</string>
+					<string>https://cloud.starise.network/ipa/beta_Starise_1_0_49_20190423_57be8d5.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -35,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>Starise</string>
+				<string>StarApp</string>
 			</dict>
 		</dict>
 	</array>
